--- a/composer.json
+++ b/composer.json
@@ -27,16 +27,20 @@
     "ext-curl": "*",
     "ext-json": "*",
     "ext-mbstring": "*",
-    "guzzlehttp/guzzle": "6.5.8"
+    "guzzlehttp/guzzle": "^7.0.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0 || ^9.0",
     "friendsofphp/php-cs-fixer": "^2.12"
   },
   "autoload": {
-    "psr-4": { "RPay\\POK\\PaymentsSdk\\" : "lib/" }
+    "psr-4": {
+      "RPay\\POK\\PaymentsSdk\\": "lib/"
+    }
   },
   "autoload-dev": {
-    "psr-4": { "RPay\\POK\\PaymentsSdk\\Test\\" : "test/" }
+    "psr-4": {
+      "RPay\\POK\\PaymentsSdk\\Test\\": "test/"
+    }
   }
 }
