--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     }
   ],
   "require": {
-    "php": "^7.3 || ^8.0",
+    "php": "^8.0",
     "ext-curl": "*",
     "ext-json": "*",
     "ext-mbstring": "*",
